--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ div {
 
 /* ID selector to select the element with id 'main-header' */
 #main-header {
-  font_size: 22px;
+  font-size: 22px;
   color:red;
 }
 
